[workspace]
members = [
  "kvq",
  "kvq_store_rocksdb",
  "kvq_store_redb",
  "txindex_errors",
  "txindex_common",
  "txindex_server",
  "txi_module_transaction_counter",

  "txi_example_server"
]
resolver = "2"

[workspace.dependencies]
arraydeque = "0.5.1"
arrayref = "0.3.6"
anyhow = "1.0.75"
async-trait = { version = "0.1.80" }
bytes = "1"
base64 = "0.22"
bincode = "=1.3.3"
ciborium = "0.2.1"
clap = { version = "4.4.6", features = ["derive", "env", "cargo"] }
derive_more = { version = "0.99.17" }
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
http = "0.2.6"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0"
prometheus = "0.13"
rayon = "1.5.0"

rand = "0.8"
rand_core = "0.6.0"
redb = "1.4.0"
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "rustls",
  "blocking",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }
serde_repr = "0.1.19"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
shadow-rs = "0.27.1"
bitcoin = { git = "https://github.com/QEDProtocol/rust-dogecoin", rev = "9b52ed2ddc18c2062c741b7df7a6e70aabde3bb8", features = [ "serde" ] }

tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }

num = { version = "0.4.0", default-features = false }
unroll = "0.1.5"
itertools = "0.10.5"
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
rocksdb = { version = "0.21.0", features = ["serde", "multi-threaded-cf"] }

bitflags = "2.5.0"
env_logger = { version = "0.9.0", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
url = "2.5.0"
crossbeam-channel = "0.5.13"
hyperlocal = "0.9.1"
socket2 = "0.5.7"
stderrlog = "0.6"
log = "0.4.14"
num_cpus = "1.12.0"
error-chain = "0.12.4"
time = { version = "0.3", features = ["formatting"] }
