[package]
edition = "2021"
name    = "kvq"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = { workspace = true }
txindex_macros = { path = "../txindex_macros" }
serde      = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
