[package]
edition = "2021"
name    = "txindex_errors"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde      = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
error-chain = { workspace = true }