[package]
name = "txindex_server"
version = "0.1.0"
edition = "2021"

[dependencies]
http = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyperlocal = { workspace = true }
hyper-util = { workspace = true }
socket2 = { workspace = true }
stderrlog = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
crossbeam-channel = { workspace = true }
bitcoin = { workspace = true }
base64 = { workspace = true }
error-chain = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
rocksdb = { workspace = true }
rayon = { workspace = true }
url = { workspace = true }

kvq = { path = "../kvq" }
txindex_common = { path = "../txindex_common" }
txindex_errors = { path = "../txindex_errors" }
kvq_store_rocksdb = { path = "../kvq_store_rocksdb" }
rust-crypto = "0.2"

arraydeque = "0.5.1"
signal-hook = "0.3"
tiny_http = "0.12.0"
page_size = "0.6.0"
sysconf = ">=0.3.4"
itertools = "0.12"
glob = "0.3"
